force-app/main/default/objects/Lead/fields/Capital_City__c.field-meta.xml
<CustomField>
    <fullName>Capital_City__c</fullName>
    <formula>Country__r.Capital_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital City</label>
    <type>Text</type>
</CustomField>