force-app/main/default/objects/Lead/fields/Country_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_3__c</fullName>
    <formula>Country__r.Country_Code_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code 3</label>
    <type>Text</type>
</CustomField>